<?xml version="1.0"?>
<package format="2">
<name>concentric_circles_rviz_plugin</name>
<version>0.1.0</version>
<description>RViz2 display plugin: concentric circles</description>
<maintainer email="urasakikeisuke@gmail.com">urasakikeisuke</maintainer>
<license>Apache License 2.0</license>

<buildtool_depend>ament_cmake_auto</buildtool_depend>

<depend>rclcpp</depend>
<depend>rviz_common</depend>
<depend>rviz_rendering</depend>
<depend>pluginlib</depend>

<export>
<build_type>ament_cmake</build_type>
</export>
</package>
